<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:background="#FFFFFF">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/ivBackSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            app:srcCompat="@drawable/outline_arrow_back_ios_new_24"
            android:scaleType="center"
            android:contentDescription="@string/icone_de_seta_para_voltar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:backgroundTint="@color/primary_color"
            app:tint="@color/white"
            app:maxImageSize="30dp"
            app:fabSize="normal" />

    <ImageView
            android:id="@+id/ivLogoSummary"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:contentDescription="Logo do Oscar App"
            app:layout_constraintBottom_toBottomOf="@+id/ivBackSummary"
            app:layout_constraintEnd_toStartOf="@+id/ivProfileSummary"
            app:layout_constraintStart_toEndOf="@+id/ivBackSummary"
            app:layout_constraintTop_toTopOf="@+id/ivBackSummary" />

    <ImageView
            android:id="@+id/ivProfileSummary"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            app:srcCompat="@drawable/outline_account_circle_24"
            app:tint="@color/grey"
            android:contentDescription="Ícone de perfil do usuário"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/tvFinalReview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/final_review"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivBackSummary" />

    <androidx.cardview.widget.CardView
            android:id="@+id/cvSubmitBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

            <Button
                    android:id="@+id/btnSubmitAll"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:backgroundTint="#000000"
                    android:text="@string/submit_all_votes"
                    android:textColor="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
            />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <!-- CARD-01 -->
    <androidx.cardview.widget.CardView android:layout_width="match_parent"
                                       android:layout_height="wrap_content"
                                       android:layout_marginHorizontal="16dp"
                                       android:layout_marginVertical="8dp"
                                       app:cardCornerRadius="12dp"
                                       app:cardElevation="2dp"

                                       app:layout_constraintVertical_bias="0"
                                       app:cardBackgroundColor="#FFFFFF"
                                       android:id="@+id/cardViewDirector"
                                       app:layout_constraintStart_toStartOf="parent"
                                       app:layout_constraintEnd_toEndOf="parent"
                                       app:layout_constraintTop_toBottomOf="@+id/cardViewMovie"
                                       app:layout_constraintBottom_toBottomOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp" tools:layout_editor_absoluteX="20dp"
                app:layout_constraintBottom_toTopOf="@+id/cvSubmitBar"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                android:id="@+id/cardViewDirector2"
        >

            <ImageView
                    android:id="@+id/ivDirectorPoster"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/chair_24dp"
                    app:tint="@color/primary_color"
                    android:contentDescription="Foto ou pôster do filme candidato"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                    android:id="@+id/tvDirectorName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivDirectorPoster"
                    app:layout_constraintTop_toTopOf="@+id/ivDirectorPoster"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.078"
                    android:text="@string/vote_para_melhor_diretor"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/check_circle_24dp"
                    android:id="@+id/check_Director"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintTop_toBottomOf="@+id/tvDirectorName"
                    app:layout_constraintVertical_bias="0.0" app:tint="@color/primary_color"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <!-- Card 02 -->
    <androidx.cardview.widget.CardView android:layout_width="match_parent"
                                       android:layout_height="wrap_content"
                                       android:layout_marginHorizontal="16dp"
                                       android:layout_marginVertical="8dp"
                                       app:cardCornerRadius="12dp"
                                       app:cardElevation="2dp"
                                       app:cardBackgroundColor="#FFFFFF"
                                       android:id="@+id/cardViewMovie"
                                       app:layout_constraintStart_toStartOf="parent"
                                       app:layout_constraintEnd_toEndOf="parent"
                                       app:layout_constraintTop_toBottomOf="@+id/tvFinalReview">


        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp" tools:layout_editor_absoluteX="20dp"
                app:layout_constraintBottom_toTopOf="@+id/cvSubmitBar"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                app:layout_constraintVertical_bias="0.272" android:id="@+id/cardViewMovie2"
        >

            <ImageView
                    android:id="@+id/ivMoviePoster"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/movie_24dp"
                    app:tint="@color/primary_color"
                    android:contentDescription="Foto ou pôster do filme candidato"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                    android:id="@+id/tvMovieName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivMoviePoster"
                    app:layout_constraintTop_toTopOf="@+id/ivMoviePoster"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.078"
                    android:text="@string/vote_para_melhor_filme"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/check_circle_24dp"
                    android:id="@+id/check_movie"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="1.0" app:layout_constraintTop_toBottomOf="@+id/tvMovieName"
                    app:layout_constraintVertical_bias="0.0" app:tint="@color/primary_color"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>