<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.ChooseMovie" android:onClick="comeback">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/ivBackVoting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            app:srcCompat="@drawable/outline_arrow_back_ios_new_24"
            android:scaleType="center"
            android:contentDescription="@string/icone_de_seta_para_voltar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:backgroundTint="@color/primary_color"
            app:tint="@color/white"
            app:maxImageSize="30dp"
            app:fabSize="normal" android:onClick="comeback"/>

    <ImageView
            android:id="@+id/ivLogoVoting"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:contentDescription="Logo do Oscar App"
            app:layout_constraintBottom_toBottomOf="@+id/ivBackVoting"
            app:layout_constraintEnd_toStartOf="@+id/ivProfileVoting"
            app:layout_constraintStart_toEndOf="@+id/ivBackVoting"
            app:layout_constraintTop_toTopOf="@+id/ivBackVoting"/>

    <ImageView
            android:id="@+id/ivProfileVoting"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            app:srcCompat="@drawable/outline_account_circle_24"
            app:tint="@color/grey"
            android:contentDescription="Ícone de perfil do usuário"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/tvCategoryName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/best_picture"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivBackVoting"/>


    <androidx.cardview.widget.CardView
            android:id="@+id/cvConfirmBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

            <ImageView
                    android:id="@+id/ivSelectionThumbnail"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="Miniatura/Pôster do filme ou diretor selecionado"
                    app:layout_constraintBottom_toTopOf="@+id/btnConfirm"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                    android:id="@+id/tvSelectionLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="YOUR SELECTION"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toTopOf="@+id/tvSelectedName"
                    app:layout_constraintEnd_toStartOf="@+id/ivCheck"
                    app:layout_constraintStart_toEndOf="@+id/ivSelectionThumbnail"
                    app:layout_constraintTop_toTopOf="@+id/ivSelectionThumbnail"/>

            <TextView
                    android:id="@+id/tvSelectedName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/ivSelectionThumbnail"
                    app:layout_constraintEnd_toStartOf="@+id/ivCheck"
                    app:layout_constraintStart_toEndOf="@+id/ivSelectionThumbnail"
                    app:layout_constraintTop_toBottomOf="@+id/tvSelectionLabel"/>

            <ImageView
                    android:id="@+id/ivCheck"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:srcCompat="@drawable/check_circle_24dp"
                    app:tint="@color/primary_color"
                    android:contentDescription="Ícone de check de confirmação"
                    app:layout_constraintBottom_toBottomOf="@+id/ivSelectionThumbnail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/ivSelectionThumbnail"/>

            <Button
                    android:id="@+id/btnConfirm"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/primary_color"
                    android:text="@string/confirm_selection"
                    android:textColor="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivSelectionThumbnail" android:textSize="16sp"
                    android:textStyle="bold"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="465dp"
            app:layout_constraintBottom_toTopOf="@+id/cvConfirmBar"
            app:layout_constraintTop_toBottomOf="@+id/tvCategoryName"
            android:id="@+id/picturesRecyclerView" tools:layout_editor_absoluteX="2dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>